# hello-gdcm

./: .gitignore  .gitmodules  CMakeLists.txt  add_class.sh  copy_to_unity.sh  copy_to_vk.py  dll_has_function.sh  hello-gdcm.kdev4  readme.md  setup_dependencies.py  setup_project.py
.kdev4/: hello-gdcm.kdev4
dll_example/: dll_example.cpp  dll_example.h
include/: DicomImage.h  ScanError.h  dicomDirectory.h  dicomSorters.h  dllContext.h  hello-gdcm.h  imageInformationList.h  series.h  testHGDCM_GetNumberOfImagesInDirectory.h  utils.h
src/: DicomImage.cpp  GetFileData.cpp  dicomDirectory.cpp  dicomSorters.cpp  dllContext.cpp  hello-gdcm.cpp  imageInformationList.cpp  testHGDCM_GetNumberOfImagesInDirectory.cpp  utils.cpp
